@@ -29,6 +29,8 @@ Release 2.7.0 - UNRELEASED
     HDFS-6657. Remove link to 'Legacy UI' in the Namenode UI.
     (Vinayakumar B via wheat9)
 
+    HDFS-7201. Fix typos in hdfs-default.xml. (Dawson Choong via wheat9)
+
 Release 2.6.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
